tests/fixtures/valid/set/set_float.py
# Set of floats
floats: set[float] = {1.1, 2.2, 3.3}

print(len(floats))
print(1.1 in floats)
print(9.9 in floats)
