tests/fixtures/invalid/pow_int_set_set.py
# Cannot call pow() with Int, Set[int], Set[int]
x = pow(1, {1, 2, 3}, {1, 2, 3})
